--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="../styles/css/style.css">
 	<link rel="stylesheet/less" type="text/css" href="../styles/css/styles.less">
 	<link rel="stylesheet" href="../styles/css/swiper.min.css">
+	<style>
+		.red{background:red;}
+	</style>
 </head>
 <body>
-<div class="swiper_box">
+<div class="swiper_box" id="aaa">
 	<div class="swiper-container">
 		<div class="swiper-wrapper" id="slide_ul">
 			<div class='swiper-slide'><a class='pic' href='javascript://'><img src="../images/111.jpg" alt=''/></a></div>
